# csc299-project

./: README.md
docs/: llm_conversation_ideas.md  llm_conversation_study.md  llm_conversation_week1.md  study_plan.md  week1_reflection.md
git_experiments/git_practice/: practice.patch  practice.txt
tasks1/: README.md
tasks1/tasks1/: README.md  task_manager.py  tasks.json
tasks2/: README.md  task_manager.py  tasks.json  tasks2.py
tasks3/: README.md  pyproject.toml  tasks.json
tasks3/src/tasks3/: __init__.py
tasks3/tests/: test_save_and_load.py  test_search_tasks.py
tasks4/: README.md  pyproject.toml
tasks4/src/tasks4/: __init__.py
tasks5/: setup.cfg
tasks5/specs/001-task-manager/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
tasks5/specs/001-task-manager/checklists/: requirements.md
tasks5/specs/001-task-manager/contracts/: task-cli.md
tasks5/src/tasks5.egg-info/: PKG-INFO  SOURCES.txt
tasks5/src/tasks5/cli/: main.py
tasks5/src/tasks5/core/: exceptions.py  models.py  service.py
tasks5/src/tasks5/storage/: adapter.py  json_adapter.py  memory_adapter.py
tasks5/src/tasks5/utils/: config.py
tasks5/tests/unit/: test_models.py  test_tasklist.py
