[project]
name = "tasks4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ankedo Daveed", email = "ankdaveed@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "openai>=2.7.2",
]

[project.scripts]
tasks4 = "tasks4:run"

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"
